Enhance GameLauncher and VersionDownloader for improved APK handling and version management. Add logging capabilities to track game launch processes and APK downloads. Refactor GameVersion to include APK availability check and update WebAppBridge for better error handling and logging integration.